[package]
name = "proby"
version = "0.4.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "Check whether hosts are reachable on certain ports and return result on HTTP"
repository = "https://github.com/svenstaro/proby"
license = "MIT"
readme = "README.md"
keywords = ["http-server", "probe", "http", "tcp", "port"]
categories = ["command-line-utilities", "command-line-interface", "network-programming", "web-programming::http-server"]
edition = "2018"

[badges]
travis-ci = { repository = "svenstaro/proby", branch = "master" }
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
structopt = "0.3"
anyhow = "1.0"
serde = "1.0"
serde_with = "1.4.0"
http = "0.2"
futures = "0.3"
simplelog = "0.7"
log = "0.4"

[dev-dependencies]
assert_cmd = "1.0"
surf = "1"
port_check = "0.1"
