[package]
name = "proby"
version = "1.0.3-alpha.0"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
description = "Check whether hosts are reachable on certain ports and return result on HTTP"
repository = "https://github.com/svenstaro/proby"
license = "MIT"
readme = "README.md"
keywords = ["http-server", "probe", "http", "tcp", "port"]
categories = ["command-line-utilities", "command-line-interface", "network-programming", "web-programming::http-server"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
actix-web = "3"
actix-rt = "2"
structopt = "0.3"
anyhow = "1"
serde = "1"
serde_with = "1"
http = "0.2"
futures = "0.3"
simplelog = "0.9"
log = "0.4"

[dev-dependencies]
assert_cmd = "1"
surf = "2"
port_check = "0.1"
